--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,7 +8,17 @@
 
 <ion-content padding>
   <ion-item>
-    <ion-label floating>Username</ion-label>
+    <ion-label floating>Prénom</ion-label>
     <ion-input type="text"></ion-input>
   </ion-item>
+  <ion-item>
+    <ion-label floating>Nom</ion-label>
+    <ion-input type="text"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label floating>Age</ion-label>
+    <ion-input type="number"></ion-input>
+  </ion-item>
+  <button ion-button large >Se présenter</button>
 </ion-content>
+
